# fpmlpy

./: pyproject.toml
scripts/: generate_extension_view.py
src/fpmlpy/schemas/5-12/: copyXml.bat  gen-trans-examples.bat  tidy-schema.bat  tidy-schemas.bat
src/fpmlpy/schemas/5-12/master/: add-schema-version.bat  add-schema-versions.bat  deltildes.bat  do-all.bat  env.bat  gen-extension-schema-for-view.bat  gen-hierarchy.bat  gen-trans.bat  tidy-example.bat  tidy-examples.bat
src/fpmlpy/schemas/5-12/scripts/: add-version.xsl  check-schema.xsl  checkSchemes.xsl  createErrata.xsl  createTocTabSchemes.xsl  documentBase.xsl  documentBaseMultipleFiles.xsl  findSchemeFromSource.xsl  floating-rate-index-esma.xsl  floating-rate-index.extract.xsl  gen-hierarchy.xsl  gen-schema-merge.xsl  gen-schema-shared.XSL  gen-schema-xml.XSL  gen-xref.xsl  generate-rr-extension-view.xsl  indexSpyDoc.xsl  schemeDefinitions.xsl  sharedTemplates.xsl  sharedTemplatesMultipleFiles.xsl  validate-messages.xsl  validate-schemes.xsl  xl2scheme.xsl
src/fpmlpy/schemas/5-3/: copyXml.bat  env.bat  gen-trans-examples.bat  gen-trans.bat  tidy-example.bat  tidy-examples.bat  tidy-schema.bat  tidy-schemas.bat
src/fpmlpy/schemas/5-3/confirmation/: Readme.txt  example-extension-5-3.xsd  fpml-asset-5-3.xsd  fpml-bond-option-5-3.xsd  fpml-business-events-5-3.xsd  fpml-cd-5-3.xsd  fpml-com-5-3.xsd  fpml-confirmation-processes-5-3.xsd  fpml-correlation-swaps-5-3.xsd  fpml-credit-event-notification-5-3.xsd  fpml-dividend-swaps-5-3.xsd  fpml-doc-5-3.xsd  fpml-enum-5-3.xsd  fpml-eq-shared-5-3.xsd  (+14 more)
(+1731 files in other folders)
