[tool.poetry]
name = "fpmlpy"
version = "0.1.0"
description = "Python bindings for FpML based on XSData"
authors = ["Matteo Angeloni <mattange@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"
packages = [{include = "fpmlpy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
xsdata = {extras = ["cli", "lxml"], version = "^24.4"}
lxml = "^5.2.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"

[tool.poetry.scripts]
generate_extension_view = 'scripts.generate_extension_view:main'

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.4.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


